[package]
name = "rox_nif"
version = "0.1.0"
authors = ["Ryan Schmukler <rschmukler@gmail.com>"]

[lib]
name = "rox_nif"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "^0.16"
rustler_codegen = "^0.16"
rocksdb = { git = "https://github.com/ellbee/rust-rocksdb.git" }

lazy_static = "*"
